api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-service-deployment
  labels:
    app: api-service
spec:
  replicas: 3 # Later multiple
  selector:
    matchLabels:
      app: api-service
  template:
    metadata:
      labels:
        app: api-service
    spec:
      containers:
        - name: api-service-container
          image: localhost:5000/api-service:v1
          ports:
            - containerPort: 8000
