mongo-db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-db-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo-db
  template:
    metadata:
      labels:
        app: mongo-db
    spec:
      containers:
        - name: mongo-db-container
          image: mongo:6
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 27017
          # env:
          #   - name: MONGO_INITDB_ROOT_USERNAME
          #     valueFrom:
          #       secretKeyRef:
          #         name: mongo-db-secret
          #         key: MONGO_INITDB_ROOT_USERNAME
          #   - name: MONGO_INITDB_ROOT_PASSWORD
          #     valueFrom:
          #       secretKeyRef:
          #         name: mongo-db-secret
          #         key: MONGO_INITDB_ROOT_PASSWORD
          volumeMounts:
            - name: mongo-db-dir
              mountPath: "/data/db"
      volumes:
        - name: mongo-db-dir
          persistentVolumeClaim:
            claimName: mongo-db-pv-claim
