ui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ui-service-deployment
  labels:
    app: ui-service
spec:
  replicas: 3
  selector:
    matchLabels:
      app: ui-service
  template:
    metadata:
      labels:
        app: ui-service
    spec:
      containers:
        - name: ui-service-container
          image: localhost:5000/ui-service:v1
          ports:
            - containerPort: 80
