api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-service
spec:
  # TODO: change to loadbalancer
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8000
  selector:
    app: api-service
