configMk1.yaml
#by default containers can communicate inside same pod as local 127.0.0.1, this service allows api to be accessible also outside (comment it all and try later)
apiVersion: v1
kind: Service
metadata:
  name: api-service
spec:
  selector:
    app: myapp-pod
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
---
apiVersion: v1
kind: Pod
metadata:
  name: myapp-pod
spec:
  volumes:
  - name: db-storage
    persistentVolumeClaim:
      claimName: myclaim
  containers:
  - name: api
    image: api:latest  #(this need to be changed to the name of the image in the local registry) localhost:32000/your-image-name:your-tag
    ports:
    - containerPort: 8000
  - name: frontend
    image: frontend:latest #(this need to be changed to the name of the image in the local registry) localhost:32000/your-image-name:your-tag
  - name: db
    image: redis:latest
    volumeMounts:
    - mountPath: /data
      name: db-storage
