mongo-db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo-db-service
  labels:
    app: mongo-db
spec:
  ports:
    - port: 27017
      protocol: TCP
      targetPort: 27017
  selector:
    app: mongo-db
