ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ui-service
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      name: http
  selector:
    app: ui-service
